# simdutf

./: .gitignore  BUILD.gn  README  amalgamation_demo.cpp  simdutf.cpp  simdutf.h
.github/workflows/: test.yml  update.yml
